Fix several issues on mobile view

--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -136,7 +136,7 @@ pre {
 img,
 .lightense-wrap {
   max-width: 100%;
-  height: 80%;
+  //height: 80%;
   vertical-align: middle;
 }
 
@@ -149,6 +149,8 @@ img,
     
     &.lightense-open {
       border-radius: 0;
+      height: auto;
+      object-fit: contain;
     }
   }
 
@@ -278,7 +280,7 @@ table td {
       position: absolute;
       top: 0;
       left: 0;
-      height: 100%;
+      height: 95%;
       width: 100%;
       object-fit: cover;
       -webkit-filter: blur(10px);
