--- a/_sass/3-modules/_gallery.scss
+++ b/_sass/3-modules/_gallery.scss
@@ -8,7 +8,13 @@
   grid-template-columns: repeat(3, auto);
   justify-content: center;
   align-content: center;
-  grid-gap: 10px;
+
+  img {
+    max-height: 350px;
+    object-fit: cover;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 
   .gallery__image {
     background: $background-color;
